add Search function